--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - git config --global user.email "builds@travis-ci.com"
   - git config --global user.name "Travis CI"
   - git fetch -t
-  - export MY_TAG="${MY_TAG}"
+  - export MY_TAG="release-${TRAVIS_OS_NAME}"
   - git push --delete origin ${MY_TAG}
   - git tag -fa "${MY_TAG}" -m "Travis CI https://travis-ci.org/iltommi/neutrino"
   - git push --quiet https://${github_token}@github.com/iltommi/neutrino ${MY_TAG}
