fix test linux 10

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,22 +20,34 @@ before_install:
   - git config --global user.name "Travis CI"
   - git fetch -t
   - export MY_TAG="release-${TRAVIS_OS_NAME}"
-  - (git tag | grep ${MY_TAG}) && git push --quiet https://${github_token}@github.com/iltommi/neutrino --delete origin ${MY_TAG} 2&> /dev/null
+  - (git tag | grep ${MY_TAG}) || git push --quiet https://${github_token}@github.com/iltommi/neutrino --delete origin ${MY_TAG}
   - git tag -fa "${MY_TAG}" -m "Travis CI https://travis-ci.org/iltommi/neutrino"
   - git push --quiet https://${github_token}@github.com/iltommi/neutrino ${MY_TAG}
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa; sudo apt-get update -qq; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y cmake g++ libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 libgsl0-dev gsl-bin libhdf4-dev build-essential; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then wget http://download.qt.io/official_releases/qt/5.6/5.6.0/qt-opensource-linux-x64-5.6.0.run; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then git clone https://github.com/benlau/qtci.git; bash qtci/bin/extract-qt-installer qt-opensource-linux-x64-5.6.0.run ~/Qt; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew tap homebrew/science; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install clang-omp qt5 cfitsio cmake hdf4 hdf5 gsl; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install fftw --with-openmp; fi
+  - >
+    if [[ "$TRAVIS_OS_NAME" == "linux" ]] 
+    then 
+      sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+      sudo apt-get update -qq
+      sudo apt-get install -y cmake g++ libcfitsio3-dev libhdf5-dev libtiff5-dev libfftw3-dev libfftw3-3 libgsl0-dev gsl-bin libhdf4-dev build-essential
+      wget http://download.qt.io/official_releases/qt/5.6/5.6.0/qt-opensource-linux-x64-5.6.0.run
+      git clone https://github.com/benlau/qtci.git
+      bash qtci/bin/extract-qt-installer qt-opensource-linux-x64-5.6.0.run ~/Qt
+    fi
+  - >
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]
+    then 
+      brew update
+      brew tap homebrew/science
+      brew install clang-omp qt5 cfitsio cmake hdf4 hdf5 gsl
+      brew install fftw --with-openmp
+    fi
   # pythonqt
   - git clone https://github.com/iltommi/PythonQt.git
   - cd PythonQt
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cmake -DQt5_DIR=~/Qt -DPythonQt_Wrap_QtAll=TRUE .; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then cmake -DCMAKE_CXX_COMPILER=/usr/local/bin/clang-omp++ -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .; fi
-  - make && make install
+  - make 
+  - make install
   - cd ..
 
 script:
