--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: cpp
 
-os: linux
+os: 
+  - linux
+  - osx
 
 git:
   depth: 9999999
@@ -20,7 +22,7 @@ before_install:
   - git config --global user.name "Travis CI"
   - git fetch -t
   - export MY_TAG="release-${TRAVIS_OS_NAME}"
-  - (git tag | grep ${MY_TAG}) || git push --quiet https://${github_token}@github.com/iltommi/neutrino --delete origin ${MY_TAG}
+#  - (git tag | grep ${MY_TAG}) || git push --quiet https://${github_token}@github.com/iltommi/neutrino --delete origin ${MY_TAG}
   - git tag -fa "${MY_TAG}" -m "Travis CI https://travis-ci.org/iltommi/neutrino"
   - git push --quiet https://${github_token}@github.com/iltommi/neutrino ${MY_TAG}
   - >
