--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
 #  - (git tag | grep ${MY_TAG}) || git push --quiet https://${github_token}@github.com/iltommi/neutrino --delete origin ${MY_TAG}
   - git tag -fa "${MY_TAG}" -m "Travis CI https://travis-ci.org/iltommi/neutrino"
   - git push --quiet https://${github_token}@github.com/iltommi/neutrino ${MY_TAG}
-  - >
+  - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]] 
     then 
       sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
@@ -35,7 +35,7 @@ before_install:
       git clone https://github.com/benlau/qtci.git
       bash qtci/bin/extract-qt-installer qt-opensource-linux-x64-5.6.0.run ~/Qt
     fi
-  - >
+  - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]
     then 
       brew update
@@ -53,13 +53,34 @@ before_install:
   - cd ..
 
 script:
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]
+    then 
+      cmake -DCMAKE_CXX_COMPILER=/usr/local/bin/clang-omp++ -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 .
+    fi
   - make
 
 install:
 
 before_deploy:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export RELEASE_FILE=Neutrino.dmg; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export RELEASE_FILE=Neutrino.deb; fi
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]
+    then 
+      export RELEASE_FILE=Neutrino.dmg
+      /usr/local/opt/qt5/bin/macdeployqt Neutrino.app
+      git clone https://github.com/iltommi/macdeployqtfix.git
+      python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
+      /usr/libexec/PlistBuddy -c "Add NSPrincipalClass string NSApplication" Neutrino.app/Contents/Info.plist
+      /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
+      mkdir -p dmg
+      cp -r Neutrino.app dmg
+      ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/icons/icon.icns --background resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg && rm -rf dmg
+    fi
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "linux" ]]
+    then 
+      export RELEASE_FILE=Neutrino.deb
+    fi
   
 deploy:
   provider: releases
