--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,6 @@ branches:
 before_install:
   - git fetch -t
   - git checkout $TRAVIS_BRANCH
-  - git config --global user.email "builds@travis-ci.com"
-  - git config --global user.name "Travis CI"
-  - git fetch -t
-  - export MY_TAG="release-${TRAVIS_OS_NAME}"
-  - git push --quiet https://${github_token}@github.com/iltommi/neutrino --delete origin :refs/tags/${MY_TAG}
-  - git tag -fa "${MY_TAG}" -m "Travis CI https://travis-ci.org/iltommi/neutrino"
-  - git push --quiet https://${github_token}@github.com/iltommi/neutrino ${MY_TAG}
   - |
     if [[ "$TRAVIS_OS_NAME" == "linux" ]] 
     then 
@@ -69,3 +62,5 @@ deploy:
   api_key: $github_token
   file: "${RELEASE_FILE}"
   skip_cleanup: true
+  on:
+    tags: true
