--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,14 @@ install:
 
 before_deploy:
   - export RELEASE_FILE=Neutrino.dmg
-  
+  - /usr/local/opt/qt5/bin/macdeployqt Neutrino.app
+  - git clone https://github.com/iltommi/macdeployqtfix.git
+  - python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
+  - /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
+  - mkdir dmg
+  - mv Neutrino.app dmg
+  - ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/icons/icon.icns --background resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
+
 deploy:
   provider: releases
   api_key: $github_token
