--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ osx_image: xcode7.1
 before_install:
   - brew update
   - brew tap homebrew/science
-  - brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl
+  - brew install gcc --without-multilib
+  - brew install qt5 cfitsio cmake hdf4 hdf5 gsl
   - ls -la /usr/local/bin
   - brew install fftw --with-openmp
   - git clone https://github.com/iltommi/PythonQt.git
