--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - brew update
   - brew tap homebrew/science
 #  - travis_wait 60 brew install gcc --without-multilib
-  - brew gcc
+  - brew install gcc
   - brew install qt5 cfitsio cmake hdf4 hdf5 gsl
   - ls -la /usr/local/bin
   - brew install fftw --with-openmp
