--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ os: osx
 
 osx_image: xcode7.1
 
+env:
+- COMPILER=/usr/local/bin/g++-6
+
+
 before_install:
   - brew update
   - brew tap homebrew/science
@@ -14,13 +18,13 @@ before_install:
   - brew install fftw --with-openmp
   - git clone https://github.com/iltommi/PythonQt.git
   - cd PythonQt
-  - cmake -DCMAKE_CXX_COMPILER=/usr/local/bin/g++ -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .
+  - cmake -DCMAKE_CXX_COMPILER=$(COMPILER) -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .
   - make 
   - make install
   - cd ..
 
 script:
-  - cmake -DCMAKE_CXX_COMPILER=/usr/local/bin/g++ -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 .
+  - cmake -DCMAKE_CXX_COMPILER=$(COMPILER) -DQt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5 .
   - make
 
 install:
