--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: cpp
 os: 
 #  - osx
   - linux
+    env: 
+      - COMPILER=g++
+      - Qt5_DIR=/usr/lib/cmake/Qt5
+        
  
 matrix:
   allow_failures:
@@ -12,18 +16,6 @@ sudo: required
 dist: trusty
 
 osx_image: xcode7.1
-
-env:
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "osx" ]]
-    then 
-        COMPILER=g++-6
-        Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
-    else 
-        COMPILER=g++
-        Qt5_DIR=/usr/lib/cmake/Qt5
-    fi
-
 
 before_install:
   - echo $COMPILER
@@ -37,7 +29,7 @@ before_install:
     elif [[ "$TRAVIS_OS_NAME" == "linux" ]]
         sudo apt-get update
         sudo apt-get upgrade
-        sudo apt-get install qt5
+        sudo apt-get install cmake qt5
     fi
   - git clone https://github.com/iltommi/PythonQt.git
   - cd PythonQt
