--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ os: linux
       - COMPILER=g++
       - Qt5_DIR=/usr/lib/cmake/Qt5
 
-matrix:
-  allow_failures:
-    - os: linux
+#matrix:
+#  allow_failures:
+#    - os: linux
  
 sudo: required
 dist: trusty
