--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
     else
         export COMPILER=g++
         sudo apt-get install -yy build-essential
-        git clone git@github.com:Kitware/CMake.git
+        git clone https://github.com/Kitware/CMake.git
         cd CMake
         ./configure
         make
