--- a/.travis.yml
+++ b/.travis.yml
@@ -34,14 +34,15 @@ before_install:
         ./configure
         make
         sudo make install
+        echo $PATH
+        export PATH=/usr/local/bin:$PATH
         sudo updatedb
         locate Qt5Config.cmake
         export Qt5_DIR=/usr/share/qt5/lib/cmake/Qt5
         sudo apt-get -yy update
-        sudo apt-get -yy upgrade
-        sudo apt-get -yy install qt5
-        sudo apt-get -yy install fftw
     fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -yy install qt5-default; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -yy install fftw; fi
   - git clone https://github.com/iltommi/PythonQt.git
   - cd PythonQt
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .
