--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,6 @@ dist: trusty
 osx_image: xcode7.1
 
 before_install:
-  - set -v
-  - echo $COMPILER
-  - echo $Qt5_DIR
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]
     then
@@ -38,17 +35,16 @@ before_install:
         cd ..
         echo $PATH
         export PATH=/usr/local/bin:$PATH
-        sudo updatedb
-        locate Qt5Config.cmake
-        export Qt5_DIR=/usr/share/qt5/lib/cmake/Qt5
-        sudo apt-get -qq update
     fi
+  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  - sudo apt-get update -qq
+  - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
+  - sudo apt-get install qt5-default qttools5-dev-tools
   - sudo updatedb
-  - locate -q Qt5Config.cmake
+  - which locate
+  - locate -q Qt5Config.cmake 2> /dev/null
   - sudo apt-get install -y qt5-default
-  - locate -q Qt5Config.cmake
   - sudo apt-get install -y qtbase5-dev
-  - locate -q Qt5Config.cmake
   - sudo apt-get install -y libfftw3-dev
   - sudo apt-get install -y libnetpbm10-dev
   - sudo apt-get install -y libgsl0-dev
