--- a/.travis.yml
+++ b/.travis.yml
@@ -38,13 +38,11 @@ before_install:
     fi
   - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
-  - sudo apt-get install qt5-default qttools5-dev-tools
+  - sudo apt-get install -y qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
+  - sudo apt-get install -y qt5-default qttools5-dev-tools
   - sudo updatedb
   - which locate
   - locate -q Qt5Config.cmake 2> /dev/null
-  - sudo apt-get install -y qt5-default
-  - sudo apt-get install -y qtbase5-dev
   - sudo apt-get install -y libfftw3-dev
   - sudo apt-get install -y libnetpbm10-dev
   - sudo apt-get install -y libgsl0-dev
