--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_install:
         brew install fftw --with-openmp; 
     else
         export COMPILER=g++
+        export Qt5_DIR=/usr/lib/x86_64-linux-gnu/cmake/Qt5
         sudo apt-get install -yy build-essential
         git clone https://github.com/Kitware/CMake.git
         cd CMake
@@ -36,7 +37,7 @@ before_install:
         echo $PATH
         export PATH=/usr/local/bin:$PATH
     fi
-  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+  - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install -y qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
   - sudo apt-get install -y qt5-default qttools5-dev-tools
