--- a/.travis.yml
+++ b/.travis.yml
@@ -38,13 +38,9 @@ before_install:
         export PATH=/usr/local/bin:$PATH
         which cmake
     fi
-  - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
-  - sudo apt-get update -qq
-  - sudo apt-get install -y qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
-  - sudo apt-get install -y qt5-default qttools5-dev-tools
-  - sudo updatedb
-  - which locate
-  - locate -q Qt5Config.cmake 2> /dev/null
+  - sudo add-apt-repository -y ppa:beineri/opt-qt561-trusty
+  - sudo apt-get update -qy
+  - sudo apt-get install -y qt56base qt56multimedia qt56script qt56svg qt56tools
   - sudo apt-get install -y libfftw3-dev
   - sudo apt-get install -y libnetpbm10-dev
   - sudo apt-get install -y libgsl0-dev
