--- a/.travis.yml
+++ b/.travis.yml
@@ -16,31 +16,11 @@ dist: trusty
 osx_image: xcode7.1
 
 before_install:
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "osx" ]]
-    then
-        export COMPILER=g++-6
-        export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
-        brew update; brew tap homebrew/science
-        brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl
-        brew install fftw --with-openmp; 
-    else
-        export COMPILER=g++
-        export Qt5_DIR=/usr/lib/x86_64-linux-gnu/cmake/Qt5
-        sudo apt-get install -yy build-essential
-        git clone https://github.com/Kitware/CMake.git
-        cd CMake
-        ./configure > cmake-configure.log
-        make
-        sudo make install
-        cd ..
-        echo $PATH
-        export PATH=/usr/local/bin:$PATH
-        which cmake
-    fi
   - sudo add-apt-repository -y ppa:beineri/opt-qt561-trusty
   - sudo apt-get update -qy
   - sudo apt-get install -y qt56base qt56multimedia qt56script qt56svg qt56tools
+  - sudo updatedb
+  - locate -q Qt5Config.cmake 2> /dev/null
   - sudo apt-get install -y libfftw3-dev
   - sudo apt-get install -y libnetpbm10-dev
   - sudo apt-get install -y libgsl0-dev
