--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ os:
  - linux
  
 matrix:
-  exclude:
-    - os: osx
   allow_failures:
     - os: linux
   
@@ -19,35 +17,27 @@ before_install:
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]
     then
-        export COMPILER=g++-6
-        export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
-        brew update; brew tap homebrew/science
-        brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl
-        brew install fftw --with-openmp; 
+      export COMPILER=g++-6
+      export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
+      brew update; brew tap homebrew/science
+      brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl
+      brew install fftw --with-openmp; 
     else
-        export COMPILER=g++
-        export Qt5_DIR=/opt/qt56/lib/cmake/Qt5/
-        sudo apt-get install -yy build-essential
-        git clone https://github.com/Kitware/CMake.git
-        cd CMake
-        ./configure > cmake-configure.log
-        make
-        sudo make install
-        cd ..
-        echo $PATH
-        export PATH=/usr/local/bin:$PATH
+      export COMPILER=g++
+      export Qt5_DIR=/opt/qt56/lib/cmake/Qt5/
+      sudo apt-get install -yy build-essential
+      git clone https://github.com/Kitware/CMake.git
+      cd CMake
+      ./configure > cmake-configure.log
+      make
+      sudo make install
+      cd ..
+      export PATH=/usr/local/bin:$PATH
+      sudo add-apt-repository -y ppa:beineri/opt-qt561-trusty
+      sudo apt-get update -qy
+      sudo apt-get install -y qt56base qt56multimedia qt56script qt56svg qt56tools
+      sudo apt-get install -y libfftw3-dev libnetpbm10-dev libgsl0-dev libhdf5-dev libhdf4-dev libpython-dev
     fi
-  - sudo add-apt-repository -y ppa:beineri/opt-qt561-trusty
-  - sudo apt-get update -qy
-  - sudo apt-get install -y qt56base qt56multimedia qt56script qt56svg qt56tools
-  - sudo updatedb
-  - locate -q Qt5Config.cmake 2> /dev/null
-  - sudo apt-get install -y libfftw3-dev
-  - sudo apt-get install -y libnetpbm10-dev
-  - sudo apt-get install -y libgsl0-dev
-  - sudo apt-get install -y libhdf5-dev
-  - sudo apt-get install -y libhdf4-dev
-  - sudo apt-get install -y libpython-dev
   - git clone https://github.com/iltommi/PythonQt.git
   - cd PythonQt
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .
@@ -62,14 +52,19 @@ script:
 install:
 
 before_deploy:
-  - export RELEASE_FILE=Neutrino.dmg
-  - /usr/local/opt/qt5/bin/macdeployqt Neutrino.app
-  - git clone https://github.com/iltommi/macdeployqtfix.git
-  - python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
-  - /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
-  - mkdir dmg
-  - mv Neutrino.app dmg
-  - ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/icons/icon.icns --background resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]
+    then
+      export RELEASE_FILE=Neutrino.dmg
+      /usr/local/opt/qt5/bin/macdeployqt Neutrino.app
+      git clone https://github.com/iltommi/macdeployqtfix.git
+      python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
+      /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
+      mkdir dmg
+      mv Neutrino.app dmg
+      ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/icons/icon.icns --background resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
+    else
+    fi
 
 deploy:
   provider: releases
