--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,8 @@ before_deploy:
       mv Neutrino.app dmg
       ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/icons/icon.icns --background resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
     else
+      make package
+      ls -la
     fi
 
 deploy:
