--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ script:
       sudo apt-get install -y dh-make devscripts fakeroot
       make package VERBOSE=1
       cpack --debug --verbose
+      cpack --help
       grep -Inr dh_shlibdeps .
       ls -la
     fi
