--- a/.travis.yml
+++ b/.travis.yml
@@ -1,91 +1,89 @@
 language: cpp
 
 os: 
- - osx
- - linux
+- osx
+- linux
+
+services:
+- docker
 
 osx_image: xcode7.1
 dist: trusty
  
 matrix:
   allow_failures:
-    - os: linux
-  
+  - os: linux
+  exclude:
+  - os: osx
+    services: docker
+    
 sudo: required
 
-
 before_install:
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "osx" ]]
-    then
-      export COMPILER=g++-6
-      export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
-      brew update; brew tap homebrew/science
-      brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl
-      brew install fftw --with-openmp; 
-    fi
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "linux" ]]
-    then
-      export COMPILER=g++
-      export Qt5_DIR=/opt/qt56/lib/cmake/Qt5/
-      sudo apt-get install -yy build-essential
-      git clone https://github.com/Kitware/CMake.git
-      cd CMake
-      ./configure --prefix=/usr > cmake-configure.log
-      make
-      sudo make install
-      cd ..
-      sudo add-apt-repository -y ppa:beineri/opt-qt561-trusty
-      sudo apt-get update -qy
-      sudo apt-get install -y qt56base qt56multimedia qt56script qt56svg qt56tools 
-      sudo apt-get install -y libfftw3-dev libnetpbm10-dev libgsl0-dev libhdf5-dev libhdf4-dev libpython-dev
-    fi
-  - git clone https://github.com/iltommi/PythonQt.git
-  - cd PythonQt
-  - cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .
-  - make 
-  - sudo make install
-  - cd ..
+- |
+  if [[ "$TRAVIS_OS_NAME" == "osx" ]]
+  then
+    export COMPILER=g++-6
+    export Qt5_DIR=/usr/local/opt/qt5/lib/cmake/Qt5
+    brew update; brew tap homebrew/science
+    brew install gcc qt5 cfitsio cmake hdf4 hdf5 gsl
+    brew install fftw --with-openmp; 
+  fi
+- |
+  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
+  then
+    wget -O- http://travis.debian.net/script.sh | sh -
+    export COMPILER=g++
+    export Qt5_DIR=/opt/qt56/lib/cmake/Qt5/
+    sudo apt-get install -yy build-essential
+    git clone https://github.com/Kitware/CMake.git
+    cd CMake
+    ./configure --prefix=/usr > cmake-configure.log
+    make
+    sudo make install
+    cd ..
+    sudo add-apt-repository -y ppa:beineri/opt-qt561-trusty
+    sudo apt-get update -qy
+    sudo apt-get install -y qt56base qt56multimedia qt56script qt56svg qt56tools 
+    sudo apt-get install -y libfftw3-dev libnetpbm10-dev libgsl0-dev libhdf5-dev libhdf4-dev libpython-dev
+  fi
+- git clone https://github.com/iltommi/PythonQt.git
+- cd PythonQt
+- cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR -UQT_QMAKE_EXECUTABLE -DPythonQt_Wrap_QtAll=TRUE .
+- make 
+- sudo make install
+- cd ..
 
 script:
-  - cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR .
-  - make
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "linux" ]]
-    then
-      sudo apt-get install -y dh-make devscripts fakeroot
-      make package VERBOSE=1
-      cpack --debug --verbose
-      cpack --help
-      grep -Inr dh_shlibdeps .
-      ls -la
-    fi
+- cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR .
+- make
+#- |
+#  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
+#  then
+#    sudo apt-get install -y dh-make devscripts fakeroot
+#    make package VERBOSE=1
+#  fi
 
 install:
 
 before_deploy:
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "osx" ]]
-    then
-      export RELEASE_FILE=Neutrino.dmg
-      /usr/local/opt/qt5/bin/macdeployqt Neutrino.app
-      git clone https://github.com/iltommi/macdeployqtfix.git
-      python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
-      /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
-      mkdir dmg
-      mv Neutrino.app dmg
-      ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/icons/icon.icns --background resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
-    fi
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "linux" ]]
-    then
-      export RELEASE_FILE=(Neutrino*.tar.gz)
-      sudo apt-get install -y dh-make devscripts fakeroot
-      make package VERBOSE=1
-      cpack --debug --verbose
-      ls -la
-    fi
+- |
+  if [[ "$TRAVIS_OS_NAME" == "osx" ]]
+  then
+    export RELEASE_FILE=Neutrino.dmg
+    /usr/local/opt/qt5/bin/macdeployqt Neutrino.app
+    git clone https://github.com/iltommi/macdeployqtfix.git
+    python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
+    /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
+    mkdir dmg
+    mv Neutrino.app dmg
+    ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/icons/icon.icns --background resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
+  fi
+- |
+  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
+  then
+    export RELEASE_FILE=(Neutrino*.tar.gz)
+  fi
 
 deploy:
   provider: releases
