--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,9 @@ os:
 osx_image: xcode7.1
 dist: trusty
  
-#services:
-#- docker
-
 matrix:
   allow_failures:
   - os: linux
-#  exclude:
-#  - os: osx
-#    services: docker
     
 sudo: required
 
@@ -33,7 +27,6 @@ before_install:
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
   then
-#    wget -O- http://travis.debian.net/script.sh | sh -
     export COMPILER=g++
     export Qt5_DIR=/opt/qt56/lib/cmake/Qt5/
     sudo apt-get install -yy build-essential
@@ -54,16 +47,25 @@ before_install:
 - make 
 - sudo make install
 - cd ..
+- |
+  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
+  then
+    sudo apt-get update ; sudo apt-get -y install libfuse-dev libglib2.0-dev cmake git libc6-dev binutils fuse # debian, Ubuntu
+    sudo yum install git cmake binutils fuse glibc-devel glib2-devel fuse-devel gcc zlib-devel libpng12 # Fedora, RHEL, CentOS
+    git clone https://github.com/probonopd/AppImageKit.git
+    cd AppImageKit
+    cmake .
+    make
+    cd ..
+    pwd
+  fi
+  
 
 script:
-- cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR .
+- mkdir -p build && cd build
+- cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR ..
 - make
-#- |
-#  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
-#  then
-#    sudo apt-get install -y dh-make devscripts fakeroot
-#    make package VERBOSE=1
-#  fi
+- cd ..
 
 install:
 
@@ -77,13 +79,23 @@ before_deploy:
     python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
     /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
     mkdir dmg
-    mv Neutrino.app dmg
-    ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon resources/icons/icon.icns --background resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
+    mv build/Neutrino.app dmg
+    ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
   fi
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
   then
-    export RELEASE_FILE=(Neutrino*.tar.gz)
+    mkdir -p Neutrino.AppDir/usr
+    cp -r build/lib build/bin Neutrino.AppDir/usr
+    cp resources/icons/icon.png resources/linuxPackage/*  Neutrino.AppDir
+    ls ${Qt5_DIR}/../../../
+    cp -r ${Qt5_DIR}/../../../plugins Neutrino.AppDir/usr/bin
+    apt-get install -y pax-utils
+    lddtree Neutrino.AppDir/usr/bin/Neutrino | grep "=>" | awk '{print $$3}' | xargs cp -t Neutrino.AppDir/usr/lib/
+    rm -rf Neutrino
+    ./AppImageKit/AppImageAssistant Neutrino.AppDir Neutrino
+    zip -FSr Neutrino.zip Neutrino
+    export RELEASE_FILE=(Neutrino.zip)
   fi
 
 deploy:
