--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ before_install:
   
 
 script:
-- mkdir -p build && cd build
+- mkdir -p build_dir && cd build_dir
 - cmake -DCMAKE_CXX_COMPILER=$COMPILER -DQt5_DIR=$Qt5_DIR ..
 - make
 - cd ..
@@ -70,7 +70,7 @@ script:
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
   then
     mkdir -p Neutrino.AppDir/usr
-    cp -r build/lib build/bin Neutrino.AppDir/usr
+    cp -r build_dir/lib build_dir/bin Neutrino.AppDir/usr
     cp resources/icons/icon.png resources/linuxPackage/*  Neutrino.AppDir
     ls ${Qt5_DIR}/../../../
     cp -r ${Qt5_DIR}/../../../plugins Neutrino.AppDir/usr/bin
@@ -93,7 +93,7 @@ before_deploy:
     python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
     /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
     mkdir dmg
-    mv build/Neutrino.app dmg
+    mv build_dir/Neutrino.app dmg
     ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
     export RELEASE_FILE=Neutrino.dmg
   fi
