--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,6 @@ script:
     ./AppImageKit/AppImageAssistant Neutrino.AppDir Neutrino
     find Neutrino.AppDir
     zip -FSr Neutrino.zip Neutrino
-    export RELEASE_FILE=(Neutrino.zip)
   fi
 
 install:
@@ -98,6 +97,11 @@ before_deploy:
     mv build_dir/Neutrino.app dmg
     ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
     export RELEASE_FILE=Neutrino.dmg
+  fi
+- |
+  if [[ "$TRAVIS_OS_NAME" == "linux" ]]
+  then
+    export RELEASE_FILE=Neutrino.zip
   fi
 
 deploy:
