--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,7 @@ script:
     sudo apt-get install -y pax-utils
     set -v
     lddtree Neutrino.AppDir/usr/bin/Neutrino | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
+    lddtree Neutrino.AppDir/usr/bin/Neutrino
     set +v 
     rm -rf Neutrino
     ./AppImageKit/AppImageAssistant Neutrino.AppDir Neutrino
