--- a/.travis.yml
+++ b/.travis.yml
@@ -88,11 +88,13 @@ before_deploy:
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]
   then
     mkdir -p Neutrino.AppDir/usr
-    cp -r build_dir/lib build_dir/bin AppImageKit/AppRun Neutrino.AppDir/usr
+    cp -r build_dir/lib build_dir/bin Neutrino.AppDir/usr
+    cp AppImageKit/AppRun Neutrino.AppDir
     cp resources/icons/icon.png resources/linuxPackage/Neutrino.desktop Neutrino.AppDir
     cp -r ${Qt5_DIR}/../../../plugins Neutrino.AppDir/usr/bin
     sudo apt-get install -y pax-utils
     lddtree Neutrino.AppDir/usr/bin/Neutrino | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
+    lddtree Neutrino.AppDir/usr/bin/plugins/platforms/libqxcb.so | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
     rm -rf Neutrino
     ./AppImageKit/AppImageAssistant Neutrino.AppDir Neutrino
     zip -FSr Neutrino.zip Neutrino
