--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,11 @@ before_deploy:
     cp -r build_dir/lib build_dir/bin Neutrino.AppDir/usr
     cp AppImageKit/AppRun Neutrino.AppDir
     cp resources/icons/icon.png resources/linuxPackage/Neutrino.desktop Neutrino.AppDir
-    cp -r ${Qt5_DIR}/../../../plugins Neutrino.AppDir/usr/bin
+    mkdir -p Neutrino.AppDir/usr/lib/qt5
+    cp -r ${Qt5_DIR}/../../../plugins Neutrino.AppDir/usr/lib/qt5
+    echo ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>"
+    find Neutrino.AppDir
+    echo "<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<"
     sudo apt-get install -y pax-utils
     lddtree Neutrino.AppDir/usr/bin/Neutrino | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
     lddtree Neutrino.AppDir/usr/bin/plugins/platforms/libqxcb.so | grep "=>" | awk '{print $3}' | xargs cp -t Neutrino.AppDir/usr/lib/
