--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ before_deploy:
 - |
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]
   then
+    cp -r build_dir/Neutrino.app .
     /usr/local/opt/qt5/bin/macdeployqt Neutrino.app
     git clone https://github.com/iltommi/macdeployqtfix.git
     python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
