--- a/.travis.yml
+++ b/.travis.yml
@@ -85,23 +85,26 @@ script:
     zip -FSr Neutrino.zip Neutrino
     export RELEASE_FILE=Neutrino.zip
   fi
-
-install:
-
-before_deploy:
 - |
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]
   then
     cp -r build_dir/Neutrino.app .
+    du -h Neutrino.app
     /usr/local/opt/qt5/bin/macdeployqt Neutrino.app
+    du -h Neutrino.app
     git clone https://github.com/iltommi/macdeployqtfix.git
     python macdeployqtfix/macdeployqtfix.py Neutrino.app/Contents/MacOS/Neutrino /usr/local
+    du -h Neutrino.app
     /usr/libexec/PlistBuddy -c "Add NSHighResolutionCapable bool True" Neutrino.app/Contents/Info.plist
     mkdir dmg
     mv Neutrino.app dmg
     ./resources/macPackage/createdmg.sh --icon-size 96 --volname Neutrino --volicon ./resources/icons/icon.icns --background ./resources/macPackage/sfondo.png --window-size 420 400 --icon Neutrino.app 90 75 --app-drop-link 320 75 Neutrino.dmg dmg
     export RELEASE_FILE=Neutrino.dmg
   fi
+
+install:
+
+before_deploy:
 
 deploy:
   provider: releases
